--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,58 @@
   }
 }
 
+.animation {
+  animation: scroll 12s infinite linear;
+}
+
+.animationtwo {
+  animation: scroll2 6s infinite linear;
+  animation-delay: 6s;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(-200%); /* Start off-screen to the left */
+  }
+  100% {
+    transform: translateX(100%); /* Move to the far right */
+  }
+}
+
+@keyframes scroll2 {
+  0% {
+    transform: translateX(0);
+  } 100% {
+    transform: translateX(100%)
+  }
+}
+
+.animatedark {
+  animation: slide 0.15s forwards;
+  animation-delay: 0.15s;
+}
+
+.animatelight {
+  animation: slide2 0.15s forwards;
+  animation-delay: 0.15s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  } 100% {
+    transform: translateX(37px);
+  }
+}
+
+@keyframes slide2 {
+  0% {
+    transform: translateX(37px);
+  } 100% {
+    transform: translateX(0px);
+  }
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
