--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,14 +23,18 @@
   left: 0;
 }
 
+.aspect-ratio-box {
+  aspect-ratio: 16 / 9;
+}
+
 .slider {
-  -webkit-appearance: none; /* Remove default appearance in WebKit browsers */
-  appearance: none; /* Standardize removal of default appearance */
-  width: 100%; /* Full width */
-  height: 8px; /* Track height */
-  background: #ededed; /* Track color */
-  border-radius: 5px; /* Rounded corners for track */
-  outline: none; /* Remove focus outline */
+  -webkit-appearance: none; 
+  appearance: none;
+  width: 100%; 
+  height: 8px;
+  background: #ededed; 
+  border-radius: 5px; 
+  outline: none; 
 }
 
 .slider::-webkit-slider-thumb {
